# compiler

./: .gitignore  CMakeLists.txt  README.md  compiler.cpp  compiler.h  main.cpp  node.cpp  node.h  parser.cpp  parser.h  runtime.c  scanner.cpp  scanner.h  tokenCodes.h
CodeGeneration/: ExprAst.h  code_generation.cpp  code_generation.h  scope.cpp  scope.h  variable_inst.cpp  variable_inst.h
Parser/: node.cpp  node.h  parser.cpp  parser.h  symbol_table.cpp  symbol_table.h
Scanner/: scanner.cpp
testPgms/correct/: math.src  recursiveFib.src  source.src  test_heap.src  test_program_minimal.src
testPgms/custom/: addition.src  additionFull.src  codegen.src
testPgms/incorrect/: test2.src
